# agentik

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  ROADMAP_EXAMPLE.md  agentik.py  budget.json  check_roadmap.py  docker-compose.dev.yml  docker-compose.yml  opencode.jsonc  pyproject.toml  requirements.txt
helpers/: __init__.py  check_roadmap.py
prompts/: build.md  document.md  fix.md  generate.md  milestone.md  milestone_fix.md  static_fix.md
runner/: __init__.py  config.py  coverage.py  diagnostics.py  dryrun.py  graph_html.py  notify.py  opencode.py  pipeline.py  plan.py  review.py  roadmap.py  rollback.py  state.py  workspace.py
runner/web/: __init__.py  _pipeline_worker.py  app.py
runner/web/frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
runner/web/frontend/src/: App.tsx  index.css
scripts/: dev-entrypoint.sh  start.ps1  start.sh
tests/: conftest.py  test_check_roadmap.py  test_config.py  test_coverage.py  test_diagnostics.py  test_dryrun.py  test_graph_html.py  test_notify.py  test_opencode.py  test_plan.py  test_review.py  test_roadmap.py  test_rollback.py  test_state.py  test_web_app.py  test_workspace.py
web/: __init__.py  _pipeline_worker.py  app.py
web/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/frontend/src/: App.tsx  index.css  main.tsx
web/frontend/src/components/: controls.tsx  create-project.tsx  dashboard.tsx  error-boundary.test.tsx  error-boundary.tsx  generator.tsx  graph.tsx  layout.tsx  logs.tsx  (+10 more)
(+29 files in other folders)
