[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentik"
version = "0.2.0"
description = "Autonomous development runner for AI-driven multi-project workflows"
authors = [{name = "Thomas Heymelot"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "rich>=13.0",
    "questionary>=2.0",
    "pytest-cov>=5.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.urls]
Repository = "https://github.com/BlockAIx/agentik"
Documentation = "https://github.com/BlockAIx/agentik#readme"

[project.scripts]
agentik = "agentik:_cli"
